--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	//add redis dependency
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	//add JWT dependency
 	implementation 'com.auth0:java-jwt:4.2.1'
 
