--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
+
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
+
 }
 
 group = 'com.trip'
 version = '0.0.1-SNAPSHOT'
+
 
 java {
 	sourceCompatibility = '17'
@@ -22,9 +26,14 @@ repositories {
 }
 
 dependencies {
+//	implementation 'org.springframework:spring-jcl:5.3.9' // Use the appropriate version
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
 
 	//add JWT dependency
 	implementation 'com.auth0:java-jwt:4.2.1'
@@ -38,6 +47,22 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	//swaggerUI
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+
+	//  스프링 부트 3.0 이상
+	// QueryDSL 라이브러리
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	//aws
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.415'
+
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
 }
