--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	//add JWT dependency
-	implementation 'com.auth0:java-jwt:4.2.1'
+	//implementation 'com.auth0:java-jwt:4.2.1'
 
 	//add Security & Oauth2 dependency
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
