--- a/build.gradle
+++ b/build.gradle
@@ -26,15 +26,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	//add redis dependency
+	//$add redis dependency
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	//add JWT dependency
-	//implementation 'com.auth0:java-jwt:4.2.1'
+	implementation 'com.auth0:java-jwt:4.2.1'
 
 	//add Security & Oauth2 dependency
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
