[feat] weather V1 1. 지역으로 날씨 가져오기(완료) 	강원도, 부산광역시, 서울특별시, 제주특별자치도 로 조회가능 	우선 DB에 넣었는데 redis에 넣는 게 좋아보임 2. 위도, 경도로 날씨 가져오기(완료) 3. JSON parsing library 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
+	//json parsing
+	implementation 'org.json:json:20230227'
 
 	//add redis dependency
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
