--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
-
+	id "org.springdoc.openapi-gradle-plugin" version "1.6.0"
 }
 
 group = 'com.trip'
@@ -52,7 +52,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	//swaggerUI
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	//implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 
 	//  스프링 부트 3.0 이상
@@ -67,6 +67,9 @@ dependencies {
 
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
 }
 
