--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/application.yml
+/src/main/resources/firebase
 ### STS ###
 .apt_generated
 .classpath
